Add all the WIP concurrency stuff

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -96,21 +96,12 @@
 
 /* KaTeX Math Styling */
 .katex {
-  font-size: 1.1em;
+  font-size: 1.2em;
 }
 
 .katex-display {
-  margin: 1.5rem 0;
-}
-
-/* KaTeX styling for light theme */
-[data-effective-theme="light"] .katex {
-  color: var(--base00);
-}
-
-/* KaTeX styling for dark theme */
-[data-effective-theme="dark"] .katex {
-  color: var(--base0);
+  margin: 0 0 1.5rem;
+  font-size: 1.25em;
 }
 
 /* Dark theme variables */
