--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,8 @@ const allPostsData = posts.map((post) => {
       <span class="word">Tyler</span>
     </h1>
     <p class="animated-subtitle slide-in-block">
-      I'm a software engineer with a passion for building things.
+      I'm a software engineer with a passion for building things.<br />
+      I'm currently studying machine learning and systems at Georgia Tech. My research interests include: Mechanistic Interpretability, AI Alignment, Deep Learning Theory
     </p>
   </section>
   <section class="posts slide-in-block" data-pagefind-ignore>
